Add Models & Migrations

--- a/IdentityServer/appsettings.json
+++ b/IdentityServer/appsettings.json
@@ -1,4 +1,7 @@
 ﻿{
+  "ConnectionStrings": {
+    "DefaultConnection": "server=localhost;user id=root;database=identityserver"
+  },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
